hphp/hack/test/typecheck/reactive/rx_if_implements33.php.exp
File "rx_if_implements33.php", line 29, characters 12-22:
Reactive functions can only call other reactive functions. (Typing[4200])
File "rx_if_implements33.php", line 20, characters 19-19:
This function is non-reactive.
